double border issue

--- a/app/caseflow_web/src/components/FilterMuiComponent/FilterMuiComponent.scss
+++ b/app/caseflow_web/src/components/FilterMuiComponent/FilterMuiComponent.scss
@@ -22,8 +22,3 @@
     border: 1px solid #BCBCBC;
 }
 
-.MuiFormControl-root .Mui-focused:not(select) {
-    outline: none !important;
-    outline-color:rgb(255, 25, 0) !important;
-}
-
